Updated line height for non stuck header menu to correctly reference logo height

--- a/inc/assets/css/theme-styles.css
+++ b/inc/assets/css/theme-styles.css
@@ -106,7 +106,7 @@ a.nav-link{
 body:not(.theme-preset-active) #masthead:not(.is-stuck) .navbar-nav>li>a:not(li.btn a),
 body:not(.theme-preset-active) #masthead:not(.is-stuck) .navbar-nav>li>a:not(li.btn a):hover,
 body:not(.theme-preset-active) #masthead:not(.is-stuck) .navbar-nav>li.current_page_item>a:not(li.btn a) {
-    line-height: var(--scrolling_logo_height, 100px);
+    line-height: var(--logo_height, 100px);
 }
 
 #main-nav>ul.navbar-nav>li>a:not(li.btn a),
